[Issue #21] First working implementation of the extended expand/collapse interface. - we draw a second bubble to each product/manufacturer bubble - that bubble has a default radius of 0 - we enlarge it o hover - when we click it, we expand/collapse the branch

--- a/src/css/bubbles.css
+++ b/src/css/bubbles.css
@@ -1,3 +1,6 @@
+.g {
+    pointer-events: all;
+}
 .map-bubble {
     fill:           rgb(20, 64, 186);
     stroke:         rgb(255, 255, 255);
@@ -12,4 +15,9 @@
     fill:           none !important;
     stroke:         rgb(20, 64, 186) !important;
     stroke-width:   2 !important;
+}
+.expand-collapse-bubble {
+    fill:           rgb(189, 31, 11);
+    stroke:         rgb(255, 255, 255);
+    stroke-width:   2;
 }
